wk_taa_taaqa/src/objects/Account_X_Reference__c.object
<CustomObject>
    <fields>
        <fullName>X2014_Active_Data_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Active_Data_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Authorizations_Total__c</fullName>
        <label>2014 Authorizations Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Software__c</fullName>
        <label>2014 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_ELF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Globalfx_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Org_PF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Outsource_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_PL_Contract_Amount__c</fullName>
        <label>2014 PL Contract Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_PL_Rate__c</fullName>
        <label>2014 PL Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2014_PL_Return_Count__c</fullName>
        <label>2014 PL Return Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Software_Total__c</fullName>
        <formula>X2014_Axcess_Tax_Software__c + X2014_Tax_Software__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2014 Tax Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Software__c</fullName>
        <label>2014 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_1040_ELF_Count__c</fullName>
        <label>2015 1040 ELF Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_1041_ELF_Count__c</fullName>
        <label>2015 1041 ELF Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_1065_ELF_Count__c</fullName>
        <label>2015 1065 ELF Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_1120S_ELF_Count__c</fullName>
        <label>2015 1120S ELF Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_AMS_Additional_Discount__c</fullName>
        <label>2015 AMS Additional Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_AMS_Renewal_Out_Of_Base_Date__c</fullName>
        <label>2015 AMS Renewal Out_Of_Base_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2015_Active_Data_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Active_Data_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Additional_Revenue__c</fullName>
        <label>2015 Additional Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Authorizations_Total__c</fullName>
        <formula>X2015_Business_Federal_Amount__c + X2015_Business_State_Amount__c + X2015_Individual_Federal_Amount__c + X2015_Individual_State_Amount__c + X2015_Consolidated_Amount__c + X2015_Proforma_Amount__c + X2015_Tax_Notebook_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2015 Authorizations Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Software__c</fullName>
        <label>2015 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Axcess_Workstream_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Business_Federal_Amount__c</fullName>
        <label>2015 Business Federal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Business_Federal_Count__c</fullName>
        <label>2015 Business Federal Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Business_State_Amount__c</fullName>
        <label>2015 Business State Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Business_State_Count__c</fullName>
        <label>2015 Business State Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Consolidated_Amount__c</fullName>
        <label>2015 Consolidated Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Consolidated_Count__c</fullName>
        <label>2015 Consolidated Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_ELF_Revenue__c</fullName>
        <label>2015 ELF Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_ELF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Engagement_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Fixed_Assets_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Globalfx__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Individual_Federal_Amount__c</fullName>
        <label>2015 Individual Federal Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Individual_Federal_Count__c</fullName>
        <label>2015 Individual Federal Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_Individual_State_Amount__c</fullName>
        <label>2015 Individual State Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Individual_State_Count__c</fullName>
        <label>2015 Individual State Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_KCN_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Coach_total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Coach total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Knowledge_Tools_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Org_PF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Original_DTN__c</fullName>
        <label>2015 Original DTN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Original_Rep__c</fullName>
        <label>2015 Original Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2015_Outsource_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Portal_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Practice_Management_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>